# swecc-email-sender

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: post_install.py  setup_env.py
swecc_email_sender/: __init__.py  cli.py
swecc_email_sender/core/: __init__.py  loader.py  sender.py
swecc_email_sender/utils/: __init__.py  markdown_utils.py
tests/: test_cli.py  test_main.py
tests/core/: test_loader.py  test_sender.py
