[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swecc-email-sender"
version = "1.0.3"
description = "A production-ready email automation library using SendGrid"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["email", "sendgrid", "automation", "markdown"]
authors = [
    { name = "SWECC", email = "info@swecc.org" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "markdown>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
    "beautifulsoup4>=4.9.0",
    "pre-commit>=3.5.0",
    "ruff>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/swecc-uw/swecc-email-sender"
Documentation = "https://github.com/swecc-uw-uw/swecc-email-sender#readme"
Repository = "https://github.com/swecc-uw-uw/swecc-email-sender.git"
"Bug Tracker" = "https://github.com/swecc-uw/swecc-email-sender/issues"

[project.scripts]
swecc-email-sender = "swecc_email_sender.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["swecc_email_sender"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line-length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = ["PLR0912", "PLR0913", "PLR2004"]  # Ignore complexity and magic number checks

[tool.ruff.lint.isort]
known-first-party = ["swecc_email_sender"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
